# task

./: .gitignore  Cargo.toml  nc  nc.pub  static
.sqlx/: query-5df4e387d3cd6596d9868f9a34e6fb8167ca97defa389d9dc049a32db3e3d025.json  query-ae949f2ec2281eacfc7ba6bfd4995592170f98ab96c684a9468ef669d544595b.json  query-c2cb8319334d28918b2911df7e2e9fdd2054c63180757c6565ea56a0a156438d.json  query-d3064fce56a5a0c5312d2249ae7af08cef34ae96ce53984bdb9d1c340592116e.json  query-ec90aebd32305a58d843c075c5b96cb1115a3b4288f81c8b35109bd91083a6d1.json  query-f95cead3d53b3c3160ff372d8ac68801f5c3b6b82657577a278738f7efe33869.json
ddl/: 20231212205401_init_schema.sql  20231212205405_create_tables.sql
src/: config.rs  lib.rs  main.rs  sql.rs  task.rs
src/model/: task.rs
src/service/: api.rs  mod.rs  task.rs
src/tasks/: Cargo.toml
src/tasks-web/: .gitignore  package.json
src/tasks-web/src/: index.html  index.scss  index.ts
src/tasks/ddl/: 20231212205401_init_schema.sql  20231212205405_create_tables.sql
src/tasks/src/: main.rs  task.rs
