#
#
#
[package]
name    = "task"
version = "0.1.0"
edition = "2021"

[dependencies]
axum               = {version="0.7.1", features=["macros"]}
sqlx               = {version="0.7.3", features=["runtime-tokio-rustls", "postgres"]}
tokio              = {version="1.34.0", features=["full"]}
serde              = {version="1.0.193", features=["derive"]}
serde_json         = {version="1.0.108"}
tracing            = {version="0.1.40"}
tracing-subscriber = {version="0.3.18", features=["env-filter"]}
