#
#
#
[package]
name    = "tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
axum               = {version="0.7.2", features=["macros"]}
envy               = {version="0.4.2"}
sqlx               = {version="0.7.3", features=["runtime-tokio-rustls", "postgres"]}
tokio              = {version="1.35.1", features=["full"]}
serde              = {version="1.0.193", features=["derive"]}
serde_json         = {version="1.0.108"}
anyhow             = {version="1.0.75"}
tracing            = {version="0.1.40"}
tracing-subscriber = {version="0.3.18", features=["env-filter"]}
thiserror          = {version="1.0.51"}
tower-http         = {version="*", features=["fs"]}
